--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: node_js
 node_js:
-  - "iojs"
-  - "8.11"
-  before_script: chmod 0777 ./node_modules/.bin/mocha
+   - "8.11"
+  before_script: chmod 0777 ./node_modules/.bin/jshint
