--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Integration Test",
   "main": "app.js",
- 
+  "scripts": {
+    "test": "./node_modules/.bin/jshint app.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DamianMoralesM/integrationTest.git"
