--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: node_js
 node_js:
   - "iojs"
   - "8.11"
- 
+ before_install:
+    - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
