--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - "iojs"
   - "8.11"
- before_install:
+  script: node_modules/.bin jshint app.js --single-run
+  before_install:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
