--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ node_js:
   - "iojs"
   - "8.11"
   script: node_modules/.bin jshint app.js --single-run
-  
+  before_install:
+    - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
