--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 node_js:
-  - "iojs"
-  - "8.11"
-  script: node_modules/.bin jshint app.js --single-run
-  before_install:
+    - "8.11"
+script: node_modules/karma/bin/karma start my.conf.js --single-run
+before_install:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
+before_script:
+    - npm install
