--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
     - "8.11"
-script: node_modules/karma/bin/karma start my.conf.js --single-run
+script: node_modules/.bin jshint app.js --single-run
 before_install:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
