--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
     - "8.11"
 script: node_modules/.bin jshint app.js --single-run
 before_install:
-    - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
 before_script:
     - npm install
+    - npm test 
