--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js:
     - "8.11"
-script: node_modules/.bin jshint app.js
+script: jshint app.js
 before_install:
     - sh -e /etc/init.d/xvfb start
 before_script:
     - npm install
+    - npm jshint -g install 
     - npm test 
