--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_install:
     - sh -e /etc/init.d/xvfb start
 before_script:
     - npm install
-    - npm jshint -g install 
+    - npm install -g jshint
     - npm test 
