--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ before_script:
     - npm install
     - npm install -g jshint
     - npm test 
+
+deploy:
+  provider: azure_web_apps
+  username: "damianMorales"
+  password: "Agilesapp2018"
+  site: "agilesApp"
