--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "package",
   "version": "1.0.0",
   "description": "Integration Test",
-  "main": "app.js",
+  "main": "api.js",
+  
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   
   "repository": {
     "type": "git",
