--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Integration Test",
   "main": "api.js",
   "scripts": {
-    "start": "node bin/www"
+    "start": "node api.js"
   }
   ,
   
