--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/DamianMoralesM/integrationTest#readme",
   "dependencies": {},
   "devDependencies": {
+    "eslint-config-google": "^0.9.1",
     "express": "^4.16.3",
     "jasmine": "^3.1.0",
     "jshint": "^2.9.5",
