--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.3",
     "jasmine": "^3.1.0",
     "jshint": "^2.9.5",
+    "mustache": "^2.3.0",
     "nodemon": "^1.17.5"
   }
 }
