--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
     - npm install -g jshint
     - npm install -g express
     - npm test 
+before_deploy: "echo 'ready?'"
 
 deploy:
   skip_cleanup: true
@@ -16,3 +17,5 @@ deploy:
   username: "damianMorales"
   password: "Agilesapp2018"
   site: "agilesApp"
+  on:
+    tags: true
