--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ deploy:
   provider: azure_web_apps
   username: "damianMorales"
   password: "Agilesapp2018"
-  site: "agilesApp"
+  site: "https://agilesapp.azurewebsites.net/"
   
