--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_deploy: "echo 'ready?'"
 
 deploy:
   provider: azure_web_apps
-  username: "damianMorales"
-  password: "Agilesapp2018"
-  site: "https://agilesapp.azurewebsites.net/"
+  username: damianMorales
+  password: Agilesapp2018
+  site: https://agilesapp.azurewebsites.net/
   
