--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_script:
     - npm test 
 
 after_success:
-- firebase deploy --token "$FIREBASE_TOKEN"
+- firebase deploy --token $FIREBASE_TOKEN
   
