--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
     - npm install -g jshint
     - npm install -g express
     - npm install -g firebase
+    - npm install -g firebase-tools
     - npm test 
 
 after_success:
