--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,7 @@ before_script:
 
 after_success:
 - firebase deploy --token $FIREBASE_TOKEN
+
+notifications:
+    slack: teamware2018:sB65u93u9kXQAEKzvKbzpnsx
   
