--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,13 @@ before_script:
     - npm install -g firebase-tools
     - npm test 
 
-after_success:
-- firebase deploy --token $FIREBASE_TOKEN
+##after_success:
+##- firebase deploy --token 
 
 notifications:
     slack: teamware2018:sB65u93u9kXQAEKzvKbzpnsx
   
+  deploy:
+  provider: firebase
+  token:
+    secure: $FIREBASE_TOKEN
