--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "package",
   "version": "1.0.0",
   "description": "Integration Test",
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DamianMoralesM/integrationTest.git"
@@ -24,6 +23,7 @@
   "devDependencies": {
     "eslint-config-google": "^0.9.1",
     "express": "^4.16.3",
+    "htmllint": "^0.7.2",
     "jasmine": "^3.1.0",
     "jshint": "^2.9.5",
     "mustache": "^2.3.0",
