--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ node_js:
 
 
 before_script:
-    - npm install
+    ##- npm install
     - npm install -g jshint
-    - npm install -g express
+  ##  - npm install -g express
     - npm install -g firebase
     - npm install -g firebase-tools
     - npm test 
