--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_script:
     ##- npm install
     - npm install -g jshint
   ##  - npm install -g express
-   # - npm install -g firebase
-   # - npm install -g firebase-tools
+    - npm install -g firebase
+    - npm install -g firebase-tools
     - npm test 
 
 script: jshint functions/index.js
