--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,7 @@
     "consolidate": "^0.15.1",
     "express": "^4.16.3",
     "firebase": "^5.0.4",
-    "firebase-admin": "~5.12.1",
+    "firebase-admin": "^5.12.1",
     "firebase-functions": "^1.0.3",
     "handlebars": "^4.0.11",
     "mustache": "^2.3.0",
