--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     "firebase": "^5.0.4",
     "firebase-admin": "^5.13.0",
     "firebase-functions": "^1.0.3",
+    "firebaseui": "^3.3.0",
     "handlebars": "^4.0.11",
     "mustache": "^2.3.0",
     "mustache-express": "^1.2.6"
