--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,10 @@
     "firebaseui": "^3.3.0",
     "handlebars": "^4.0.11",
     "mustache": "^2.3.0",
-    "mustache-express": "^1.2.6"
+    "mustache-express": "^1.2.6",
+    "passport-facebook": "^2.1.1",
+    "vue": "^2.5.17",
+    "passport": "^0.4.0"
   },
   "private": true
 }
